Specification alignment
